--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,3 +1,5 @@
-<div class=panel-footer>
-    Copyright (c)Videocourses, All rights reserved
+<div>
+  <span class="float-right">
+      Copyright (c)Videocourses, All rights reserved
+  </span>
 </div>
