--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,5 +1,11 @@
-<div>
-  <span>logo</span>
-  <span>user login</span>
-  <input type="button" value="Log Out">
-</div>
+  <div class="row">
+      <div class="col-md-8">
+          <img alt="logo" width="40" height="40" src="..\..\..\assets\images\logo.png" />
+      </div>
+      <div class="col-md-2 login">
+        <span  class="font-weight-bold">Rijko Vsegda_Rijko</span>
+      </div>
+      <div class="col-md-1 float-right">
+          <input type="button" class="btn btn-info" value="Log Out">
+      </div>
+  </div>
