--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,5 +1,7 @@
-<div>
-  <input type="search" placeholder="type smth here">
-  <input type="button" value="Search">
-</div>
+<div class="input-group mb-2">
+    <input type="search" class="form-control" placeholder="Name, fragment or date" aria-label="Search" aria-describedby="basic-addon2">
+    <div class="input-group-append">
+      <input type="button" class="btn btn-primary" id="basic-addon2" value="Search">
+    </div>
+  </div>
 
