--- a/src/app/course-list/course-list-item/course-list-item.component.html
+++ b/src/app/course-list/course-list-item/course-list-item.component.html
@@ -1,10 +1,27 @@
-<div class="row">
-  <div class="col-md-8">
-    <div>{{courseItem.Title}}</div>
-    <div>{{courseItem.Description}}</div>
-  </div>
-  <div class="col-md-2 btn-group">
-    <input type="button" value="edit">
-    <input type="button" value="delete">
-  </div>
+<div class="card bg-light mb-3">
+    <div>
+        <div class="row">
+            <div class="col-md-4">
+                <div>{{courseItem.Title}}</div>
+            </div>
+            <div class="col-md-2">
+                <div>{{courseItem.Duration}}</div>
+            </div>
+            <div class="col-md-2">
+                <div>{{courseItem.CreationDate | date: 'dd/MM/yyyy'}}</div>
+            </div>
+            <div class="col-md-4">
+              <input type="button" class="btn btn-info" value="edit">
+            </div>
+        </div>>
+        <div class="row">
+            <div class="col-md-8">
+                <div>{{courseItem.Description}}</div>
+              </div>
+              <div class="col-md-4">
+                <input type="button" class="btn btn-info" value="delete">
+              </div>
+        </div>
+      </div>
 </div>
+
