--- a/src/app/course-list/course-list/course-list.component.html
+++ b/src/app/course-list/course-list/course-list.component.html
@@ -1,3 +1,3 @@
-<div>
-  <course-list-item *ngFor="let course of courses" [courseItem]="course"></course-list-item>
+<div class="border rounded">
+  <course-list-item *ngFor="let course of courses" [courseItem]="course" class="list-item"></course-list-item>
 </div>
