--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,7 +5,7 @@
       <div class="col-md-2 login">
         <span  class="font-weight-bold">Rijko Vsegda_Rijko</span>
       </div>
-      <div class="col-md-1 float-right">
+      <div class="col-md-1">
           <input type="button" class="btn btn-info" value="Log Out">
       </div>
   </div>
